Closed Bug 565295 Opened 14 years ago Closed 14 years ago

growl crash [@ nsMessengerOSXIntegration::OnAlertClicked(unsigned short const*)]

Categories

(Thunderbird :: OS Integration, defect)

x86
macOS
defect
Not set
critical

Tracking

(thunderbird3.1 rc1-fixed)

RESOLVED FIXED
Thunderbird 3.3a1
Tracking Status
thunderbird3.1 --- rc1-fixed

People

(Reporter: wsmwk, Assigned: m_kato)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

growl crash [@ nsMessengerOSXIntegration::OnAlertClicked(unsigned short const*)]
~#20 Mac crash for thunderbird (but not an overall topcrash), all TB v3.0.4

bp-68a1c778-8a73-46c6-a4cd-6dd002100416
0	thunderbird-bin	nsMessengerOSXIntegration::OnAlertClicked	 mailnews/base/src/nsMessengerOSXIntegration.mm:205
1	thunderbird-bin	nsMessengerOSXIntegration::Observe	mailnews/base/src/nsMessengerOSXIntegration.mm:292
2	libalerts_s.dylib	-[mozGrowlDelegate growlNotificationWasClicked:]	toolkit/components/alerts/src/mac/mozGrowlDelegate.mm:361
3	libalerts_s.dylib	+[GrowlApplicationBridge growlNotificationWasClicked:]	toolkit/components/alerts/src/mac/growl/GrowlApplicationBridge.m:564
4	Foundation	_nsnote_callback	
5	CoreFoundation	__CFXNotificationHandleMessage	
6	CoreFoundation	__CFXNotificationReceiveFromServer	
7	CoreFoundation	__CFMachPortPerform	
8	CoreFoundation	__CFRunLoopRun	
9	CoreFoundation	CFRunLoopRunSpecific	
10	CoreFoundation	CFRunLoopRunInMode	
11	HIToolbox	RunCurrentEventLoopInMode	
12	HIToolbox	ReceiveNextEventCommon	
13	HIToolbox	BlockUntilNextEventMatchingListInMode	
14	AppKit	_DPSNextEvent	
15	AppKit	-[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:]	
16	AppKit	-[NSApplication run]	
17	thunderbird-bin	nsAppShell::Run	widget/src/cocoa/nsAppShell.mm:771
domWindow seems to be null.
Attached patch simple patchSplinter Review
Attachment #445031 - Flags: review?(bugzilla)
Assignee: nobody → m_kato
Comment on attachment 445031 [details] [diff] [review]
simple patch

Admittedly, I'm not quite sure why domWindow would be null, unless we're actually on the hidden window maybe (I'm not sure if that's possible), in any case, catching the crash is the first step in working this out.
Attachment #445031 - Flags: superreview+
Attachment #445031 - Flags: review?(bugzilla)
Attachment #445031 - Flags: review+
Attachment #445031 - Flags: approval-thunderbird3.1+
Checked in:

http://hg.mozilla.org/comm-central/rev/b66dff02dd00
http://hg.mozilla.org/releases/comm-1.9.2/rev/4b71a3a1e41b
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.2a1
Crash Signature: [@ nsMessengerOSXIntegration::OnAlertClicked(unsigned short const*)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: