Bug 565295 growl crash [@ nsMessengerOSXIntegration::OnAlertClicked(unsigned short const*)]. r/sr=Standard8